@@ -15,6 +15,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***   Add --l2-name option for controlling "v" naming.
 
+****  Fix removal of empty packages, modules and cells, bug1034. [Johan Bjork]
+
 
 * Verilator 3.882 2016-03-01
 
